# Music_Flash_Cards

./: .gitignore  README.md  music_note_flash_cards.py  pyaudio_test.py  pyproject.toml
music_flash_cards/: __main__.py  music_note_flash_cards.py
music_flash_cards/cards/: __init__.py
